--- a/game-release/pom.xml
+++ b/game-release/pom.xml
@@ -25,7 +25,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>4.2.1.RELEASE</version>
-      <scope>runtime</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -44,6 +44,25 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.4.0</version>
+        <executions>
+          <execution>
+            <phase>test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+        <mainClass>org.devhq.gamerelease.game_release.GameRelease</mainClass>
+        <arguments>
+          <!-- arguments go here -->
+        </arguments>
         </configuration>
       </plugin>
     </plugins>
