--- a/game-release/pom.xml
+++ b/game-release/pom.xml
@@ -33,6 +33,12 @@
       <version>4.2.1.RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>4.2.1.RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   
   <build>
