--- a/game-release/pom.xml
+++ b/game-release/pom.xml
@@ -21,6 +21,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -39,6 +40,14 @@
       <version>4.2.1.RELEASE</version>
       <scope>compile</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4-1203-jdbc42</version>
+      <scope>compile</scope>
+    </dependency>
+    
   </dependencies>
   
   <build>
