--- a/game-release/pom.xml
+++ b/game-release/pom.xml
@@ -48,6 +48,20 @@
       <scope>compile</scope>
     </dependency>
     
+     <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>persistence-api</artifactId>
+      <version>1.0.2</version>
+      <scope>compile</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.0.2.Final</version>
+      <scope>compile</scope>
+    </dependency>
+    
   </dependencies>
   
   <build>
