--- a/game-release/pom.xml
+++ b/game-release/pom.xml
@@ -49,9 +49,9 @@
     </dependency>
     
      <dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>persistence-api</artifactId>
-      <version>1.0.2</version>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.1-api</artifactId>
+      <version>1.0.0.Final</version>
       <scope>compile</scope>
     </dependency>
     
